--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,13 @@ apply plugin: 'com.android.library'
 group='com.github.luckyBin'
 android {
     compileSdkVersion 22
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
+        versionCode 20170626
         versionName "1.0"
-
-
     }
     buildTypes {
         release {
