--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven' // 添加这个
 
 group='com.github.luckyBin'
 android {
@@ -20,6 +21,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+    // 指定编码
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
     }
 }
 
