--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,23 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven' // 添加这个
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-group='com.github.luckyBin'
-android {
-    compileSdkVersion 22
-    buildToolsVersion "25.0.0"
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 22
-        versionCode 20170626
-        versionName "1.0"
+buildscript {
+    repositories {
+        jcenter()
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-    // 指定编码
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // Add this line
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    compile 'com.google.zxing:core:3.3.0'
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
